<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
            android:padding="@dimen/standart_padding">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/title" android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <EditText android:id="@+id/title_add_event" android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <TextView android:text="@string/begin" android:paddingTop="@dimen/padding_top" android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <TextView android:padding="@dimen/standart_padding" android:id="@+id/date_add_event" android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <TimePicker android:id="@+id/time_add_event" android:layout_width="wrap_content" android:layout_height="wrap_content"></TimePicker>
        <TextView android:text="@string/place" android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <EditText android:id="@+id/time_zone_add_event" android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <TextView android:text="@string/description" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <EditText android:id="@+id/description_add_event" android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <Button android:id="@+id/add_event_but" android:text="@string/add_event" android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>