<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:orientation="vertical"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 >
    <android.support.design.widget.AppBarLayout android:layout_width="match_parent"
                                                android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/standart_padding">
        <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView android:text="@string/title"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
            <EditText android:id="@+id/title_update_event"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>
            <TextView android:text="@string/place"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
            <EditText
                    android:id="@+id/location_update_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView android:text="@string/description"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
            <EditText android:id="@+id/description_update_event"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>
            <TextView
                    android:text="Периодичность"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Spinner    android:id="@+id/rrule_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
            <TextView
                      android:text="Начало события"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>

                 <DatePicker android:id="@+id/date_start_pick"
                             android:calendarViewShown="false"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                 android:layout_weight="1"/>
                 <TimePicker
                         android:layout_weight="1"
                            android:id="@+id/time_update"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

            <TextView
                      android:text="Окончание события"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>
            <DatePicker android:id="@+id/date_end_pick"
                        android:calendarViewShown="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            <TimePicker
                    android:id="@+id/time_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>